Fixed transparency on navbar on mobile devices.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -263,6 +263,10 @@
    color: #000;
  }
 
+.navbar-collapse {
+  background-color: $background-color;
+}
+
  .navbar-right {
    margin-top: 15px;
    margin-right: 0px;
